--- a/app/views/design/index.html.erb
+++ b/app/views/design/index.html.erb
@@ -26,7 +26,7 @@ Leer</div>
 
 	<table  width="1260px" border="1" cellspacing="0" cellpadding="0">
 	<tr>
-	<td height="20"><MARQUEE BEHAVIOR=ALTERNATE >  <h1>Digger das Spiel !  </h1>  </MARQUEE>
+	<td height="20"><MARQUEE BEHAVIOR=ALTERNATE >  <h1>Digger das Spiel ! ! !</h1>  </MARQUEE>
 	 </td>
 	</tr>
 	</table>
